# swaylock-plugin

./: README.md  comm.c  example_label_outputs.py  example_xwayland_wrapper.py  forward-client.c  forward.c  loop.c  main.c  meson.build  meson_options.txt  pam.c  password.c  render.c  rotate_example.sh  seat.c  setsid.c  sleep-watcher.c  swaylock.1.scd
completions/: meson.build
completions/bash/: swaylock
completions/fish/: swaylock.fish
completions/zsh/: _swaylock
include/: seat.h  swaylock.h
